--- a/teste rff.html
+++ b/teste rff.html
@@ -24,15 +24,15 @@
         </tr>
         <tr height="15">  </tr>
         <tr id="nome"> 
-            <td style="padding-left:20px; font-size: 18px;" > Catarina Guerra Carmo </td>
+            <td style="padding-left:20px; font-size: 18px;" > Rogério M. Fernandes Ferreira </td>
         </tr>
         <tr id="cargo"> 
-            <td style="padding-left:20px; font-size: 16px;"> Communication & Legal Directories </td> 
+            <td style="padding-left:20px; font-size: 16px;"> Founding and Managing Partner </td> 
         </tr>
         <tr height="5">  </tr>
         <tr id="email"> 
             <td style="font-size: 12px; font-weight: bold; text-decoration: underline; padding-left:20px; color: #3e1e11 !important;"> 
-                <span style="color: #3e1e11 !important;"> comunicacao@rfflawyers.com </span> 
+                <span style="color: #3e1e11 !important;"> rogeriofernandesferreira@rfflawyers.com </span> 
             </td> 
         </tr>
         <tr>
@@ -55,11 +55,11 @@
             <td style="font-size: 12px; font-weight: bold; padding-left:20px;"> Assistant: </td> 
         </tr>
         <tr> 
-            <td style="font-size: 12px; padding-left:20px;"> Olga Neto </td> 
+            <td style="font-size: 12px; padding-left:20px;"> Margarida Carvalho Monteiro </td> 
         </tr>
         <tr> 
             <td style="font-size: 12px; font-weight: bold; text-decoration: underline; padding-left:20px; color: #3e1e11 !important;"> 
-                <span style="color: #3e1e11 !important;"> practicedevelopment@rfflawyers.com </span>  
+                <span style="color: #3e1e11 !important;"> margaridacarvalhomonteiro@rfflawyers.com </span>  
             </td> 
         </tr>
         <tr height="10"> </tr>
@@ -146,6 +146,8 @@
             <td style="padding-left:20px;">
                 <img src="https://raw.githubusercontent.com/rfflawyers/rff/main/Images/Imagem1.png" height="40" width="48" alt="Iurisgal logo">
                 <img src="https://raw.githubusercontent.com/rfflawyers/rff/main/Images/AEA%20LOGO%20ENGLISH.jpg" height="40" width="58" alt="AEA Logo">
+                <img src="https://raw.githubusercontent.com/rfflawyers/rff/main/Images/lexunion.jpg" height="40" width="100" alt="AEA Logo">
+                <img src="https://raw.githubusercontent.com/rfflawyers/rff/main/Images/step.jpg" height="40" width="100" alt="AEA Logo">
             </td>
             
         </tr>
